--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,7 @@ setupdir = cms/
 
 [testenv]
 distribute = False
-commands =
-   {envpython} --version
+commands =  {envpython} --version
 deps = flake8
 
 [testenv:style]
@@ -16,4 +15,8 @@ commands = flake8
 basepython=python2.7
 
 [testenv:py3]
-basepython=python3.6
+basepython=python3
+
+[flake8]
+show-source = True
+exclude=venv-tox,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
