--- a/pom.xml
+++ b/pom.xml
@@ -7,8 +7,8 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.openecomp.vvp</groupId>
-  <artifactId>vvp-cms</artifactId>
+  <groupId>org.openecomp.vvp.cms</groupId>
+  <artifactId>cms</artifactId>
   <packaging>pom</packaging>
   <version>1.0.0-SNAPSHOT</version>
   <name>vvp-cms</name>
@@ -40,14 +40,14 @@
         <plugin>
             <groupId>io.fabric8</groupId>
             <artifactId>docker-maven-plugin</artifactId>
-            <version>0.15.1</version>
+            <version>0.19.1</version>
             <configuration>
                 <verbose>true</verbose>
                 <apiVersion>1.23</apiVersion>
                 <registry>nexus3.onap.org:10003</registry>
                 <images>
                     <image>
-                        <name>openecomp/vvp-cms</name>
+                        <name>openecomp/vvp/cms</name>
                         <alias>vvp-cms</alias>
                         <build>
                             <cleanup>true</cleanup>
@@ -88,7 +88,7 @@
                         <goal>push</goal>
                     </goals>
                     <configuration>
-                        <image>openecomp/vvp-cms</image>
+                        <image>openecomp/vvp/cms</image>
                     </configuration>
                 </execution>
             </executions>
@@ -119,7 +119,4 @@
     </repository>
   </repositories>
 </project>
-
-
-
 
