Update docker tag convention
Update docker tagging convention to use:
$VERSION-SNAPSHOT-YYYYMMDDTHHMMSSZ (for dev images)
$VERSION-STAGING-YYYYMMDDTHHMMSSZ (for staging images)

Change-Id: Ib3207f175fd41a8e90664bb1a139d4e0a3fcf259
Issue-ID: CIMAN-132
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>
Signed-off-by: stark, steven <ss820f@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -19,9 +19,10 @@
         <sitePath>/content/sites/site/org/openecomp/vvp/${project.artifactId}/${project.version}</sitePath>
         <!--maven-->
         <timestamp>${maven.build.timestamp}</timestamp>
-        <maven.build.timestamp.format>yyyy.MM.dd.HH.mm</maven.build.timestamp.format>
+        <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
         <!--docker-->
-        <docker.tag>${project.version}-${timestamp}</docker.tag>
+        <docker.snapshot.tag>${project.version}-SNAPSHOT-${timestamp}</docker.snapshot.tag>
+        <docker.staging.tag>${project.version}-STAGING-${timestamp}</docker.staging.tag>
         <docker.latest.tag>${project.version}-latest</docker.latest.tag>
   </properties>
 
@@ -53,8 +54,7 @@
                         <build>
                             <cleanup>true</cleanup>
                             <tags>
-                                <tag>${docker.tag}</tag>
-                                <tag>${docker.latest.tag}</tag>
+                                <tag>${docker.snapshot.tag}</tag>
                             </tags>
                             <dockerFileDir>${project.basedir}</dockerFileDir>
                         </build>
