[VVP] excluding symlink from sonar scans
excluding __init from sonar scan because symlink

Change-Id: I075e43de7b279e57bea4192b1454f74e89950708
Issue-ID: VVP-56
Signed-off-by: stark, steven <ss820f@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <sonar.language>py</sonar.language>
         <sonar.pluginName>python</sonar.pluginName>
         <sonar.inclusions>django/*/**.py</sonar.inclusions>
+        <sonar.exclusions>django/cms/settings/__init__.py</sonar.exclusions>
   </properties>
 
   <build>
