Fix snapshot tag
Snapshot tag takes project.version into its name, which
already contains the word "SNAPSHOT" in it. No need to add
the word SNAPSHOT in the tag again.

Change-Id: I1afa2e49fd274d22f00f320e351d2adeb22b4826
Issue-ID: VVP-55
Signed-off-by: Jessica Wagantall <jwagantall@linuxfoundation.org>

--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
         <timestamp>${maven.build.timestamp}</timestamp>
         <maven.build.timestamp.format>yyyyMMdd'T'HHmmss'Z'</maven.build.timestamp.format>
         <!--docker-->
-        <docker.snapshot.tag>${project.version}-SNAPSHOT-${timestamp}</docker.snapshot.tag>
+        <docker.snapshot.tag>${project.version}-${timestamp}</docker.snapshot.tag>
         <docker.staging.tag>${project.version}-STAGING-${timestamp}</docker.staging.tag>
         <docker.latest.tag>${project.version}-latest</docker.latest.tag>
         <docker.pull.registry>nexus3.onap.org:10001</docker.pull.registry>
