[VVP] adding sonar coverage report to cms
adding logic to pom and tox to generate coverage report

Change-Id: Ib5d1452aa40d55b3a212f3c3570f5e03d91dd319
Issue-ID: VVP-56
Signed-off-by: stark, steven <ss820f@att.com>

--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,55 @@
 [tox]
-skipsdist=True
-envlist = py27,py3,style
-setupdir = cms/
+envlist = py36-django1-10-6, style
+skipsdist = True
 
 [testenv]
-distribute = False
-commands =  {envpython} --version
-deps = flake8
+changedir = {toxinidir}/django
+envlogdir = {toxinidir}/django/logs
+setenv =
+    DJANGO_SETTINGS_MODULE=cms.settings.tox_settings
+    PYTHONPATH={toxinidir}/django
+    SECRET_KEY=xxxxxxxxxxxxTEST-SECRET-KEYxxxxxxxxxxxx
+    ENVIRONMENT=development
+    PROGRAM_NAME_URL_PREFIX=vvp
+    EMAIL_HOST=localhost
+    EMAIL_HOST_PASSWORD=
+    EMAIL_HOST_USER=
+    EMAIL_PORT=25
+    PGDATABASE=icecmsdb
+    PGUSER=cms_postgresuser
+    PGPASSWORD=cms_postgrespass
+    PGHOST=localhost
+    PGPORT=5432
+    SLACK_API_TOKEN=
+    S3_HOST=dev-s3.vvp
+    S3_PORT=443
+    AWS_ACCESS_KEY_ID=aaa049-FAKE-ACCESS-KEY-575840
+    AWS_SECRET_ACCESS_KEY=aaa049575840-SOME-FAKE-SECRET-KEY-aaa049575840
+    STATIC_ROOT=/app/htdocs
+    SERVICE_PROVIDER=exmaple_sp
+    PROGRAM_NAME=example_pn
+    SERVICE_PROVIDER_DOMAIN=example_domain
+    CMS_APP_USER=cmsappuser
+    CMS_APP_USER_PASSWORD=cmsappuserpassword
+    CMS_APP_USER_MAIL=cmsappuser@example.com
+    CMS_APP_CLIENT_ID=EeB4Xeimooc6xieSeeKah8dae1eipae4otaeshee
+    CMS_APP_CLIENT_SECRET=xxxxxxxxxxxxTEST-CLIENT-SECRET-KEYxxxxxxxxxxxx
+    CMS_NEVERCACHE_KEY=xxxxxxxxxxxxTEST-NEVERCACHE-SECRET-KEYxxxxxxxxxxxx
+
+[testenv:py36-django1-10-6]
+basepython = python3.6
+deps = -r{toxinidir}/django/requirements.txt
+    django-jenkins
+    coverage
+commands =  python --version
+    python {toxinidir}/django/manage.py jenkins --enable-coverage
 
 [testenv:style]
+basepython = python3
+deps = flake8
 commands = flake8
-
-[testenv:py27]
-basepython=python2.7
-
-[testenv:py3]
-basepython=python3
 
 [flake8]
 show-source = True
 exclude=venv-tox,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build
+
