--- a/pom.xml
+++ b/pom.xml
@@ -29,14 +29,26 @@
         <!--sonar-->
         <sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
         <sonar.sources>.</sonar.sources>
-        <sonar.python.coverage.reportPath>coverage.xml</sonar.python.coverage.reportPath>
+        <sonar.python.coverage.reportPath>django/reports/coverage.xml</sonar.python.coverage.reportPath>
         <sonar.language>py</sonar.language>
         <sonar.pluginName>python</sonar.pluginName>
-        <sonar.inclusions>django/*/**.py</sonar.inclusions>
+        <sonar.inclusions>django/cms/*/**.py</sonar.inclusions>
         <sonar.exclusions>django/cms/settings/__init__.py</sonar.exclusions>
   </properties>
 
   <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <version>1.2.1</version>
+            <configuration>
+              <executable>${session.executionRootDirectory}/mvn-phase-script.sh</executable>
+            </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
     <plugins>
         <plugin>
             <groupId>org.sonatype.plugins</groupId>
@@ -104,6 +116,26 @@
                     </configuration>
                 </execution>
             </executions>
+        </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2.1</version>
+          <executions>
+            <execution>
+              <id>test script</id>
+              <phase>test</phase>
+              <goals>
+                <goal>exec</goal>
+              </goals>
+              <configuration>
+                <arguments>
+                  <argument>__</argument>
+                  <argument>test</argument>
+                </arguments>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
     </plugins>
   </build>
