[VVP] fix cms pom file for docker version
Change-Id: I51a5a42141d7f74b9aea234fc2014b8affc102e1
Issue-ID: VVP-65
Signed-off-by: stark, steven <ss820f@att.com>

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
                             <cleanup>true</cleanup>
                             <tags>
                                 <tag>${docker.snapshot.tag}</tag>
+                                <tag>${docker.latest.tag}</tag>
                             </tags>
                             <dockerFileDir>${project.basedir}</dockerFileDir>
                         </build>
