[VVP] freeze python requirements in vvp projects
Change-Id: Ie34b8a39ddae09c4b814a18a90a3d9431977d8f2
Issue-ID: VVP-115
Signed-off-by: stark, steven <steven.stark@att.com>

--- a/django/requirements.txt
+++ b/django/requirements.txt
@@ -39,6 +39,6 @@ Django==1.10.6
 djangorestframework==3.6.4
 Mezzanine==4.2.3
 git+https://github.com/att-innovate/mezzanine-api.git@master
-psycopg2
-boto
-django-storages
+psycopg2==2.7.5
+boto==2.49.0
+django-storages==1.7.1
