--- a/tox.ini
+++ b/tox.ini
@@ -46,7 +46,7 @@ commands =  python --version
 
 [testenv:style]
 basepython = python3
-deps = flake8
+deps = flake8==3.4.1
 commands = flake8
 
 [flake8]
